fix: changed border color to improve visibility

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -6,12 +6,12 @@
 }
 
 .dead {
-    border: 1px solid black;
+    border: 0.5px solid white;
     background-color: black;
 }
 
 .alive {
-    border: 1px solid black;
+    border: 0.5px solid white;
     background-color: red;
 }
 
